--- a/index.html
+++ b/index.html
@@ -1,72 +1,68 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script>
-          if ($(window).width() < 315) {document.getElementById("contact").innerHTML = "Contacts:<br/>LacombeGhislain.cn @gmail.com<br/>438-680-1454<br/>203 Rue Grenier";}
-          if ($(window).width() > 315) {document.getElementById("contact").innerHTML = "Contacts:<br/>LacombeGhislain.cn@gmail.com<br/>438-680-1454<br/>203 Rue Grenier";}
-          </script>
+        
     </head>
     <body>
       <div class="gradient">
         <div class="contenu">
           <div class="nom">
-            Ghislain Lacombe
+            Irissa
           </div>
           <div class="description">
-            Je suis un étudiant en technique d'intégration multimédia.<br/>
-            J'aime créer des jeux en 2d et 3d et je peux faire la conception
-       et le code de sites webs.
+            This site was temporaly created for a special event.<br/>
+            Happy birthday Irissa!!!
           </div>
-          <div class="contact" id="contact">
-            Contacts:<br/>
-            LacombeGhislain.cn@gmail.com<br/>
-            438-680-1454<br/>
-            203 Rue Grenier
+          <div class="placeholder" id="placeholder">
+            From:<br/>
+            Moonlight<br/>
+            Ensemble Stars discord<br/>
+            ES WUCAAAA Guild
           </div>
           <div class="animation"></div>
           <div class="projet">
-            <div class="projet01"> <a href="#photoshop">Projet Photoshop</a></div>
-            <div class="date">2018</div>
-            <div class="projet02"><a href="#animation2d">Projet d'Animation 2d</a></div>
-            <div class="date">2019</div>
-            <div class="projet03"><a href="#video">Projet Vidéo</a></div>
-            <div class="date">2019</div>
-            <div class="projet04"><a href="#jeu3d">Projet jeu 3d</a></div>
-            <div class="date">2019</div>
+            <div class="projet01"> <a href="#photoshop">Izumi Sena </a></div>
+            <div class="date">#1</div>
+            <div class="projet02"><a href="#animation2d">Izumi Sena</a></div>
+            <div class="date">#2</div>
+            <div class="projet03"><a href="#video">Izumi Sena</a></div>
+            <div class="date">#3</div>
+            <div class="projet04"><a href="#jeu3d">Izumi Sena</a></div>
+            <div class="date">#4</div>
           </div>
         </div>
         
       </div>
       <div class="gradient2">
         <div class="projetPhotoshop">
-          <div class="title">Projet Photoshop
-            <div class="date">2018</div>
+          <div class="title">Izumi Sena
+            <div class="date">#1</div>
           </div>
-          <img class="imageProjet01" id="photoshop" src="https://i.imgur.com/AfRv5V8.png" alt="Projet Photoshop" />
+          <div class="imageProjet01" data-postid="22894774" data-share-method="host" data-aspect-ratio="2.16216" data-width="100%"><a href="https://tenor.com/view/izumi-sena-ensemble-stars-enstars-izuleo-knights-gif-22894774"></a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         </div>
       </div>
       <div class="gradient3">
         <div class="projetAnimation">
-          <div class="title" id="animation2d">Projet d'Animation 2d
-            <div class="date">2019</div>
+          <div class="title" id="animation2d">Izumi Sena
+            <div class="date">#2</div>
           </div>
-          <iframe  class="imageProjet01" id="animation2d"  src="https://giphy.com/embed/E3yuTPuc9zQSKUEGM5" width="100%" height="100%"  allowFullScreen></iframe>
+          <div class="imageProjet01" data-postid="25769063" data-share-method="host" data-aspect-ratio="0.590625" data-width="100%"><a href="https://tenor.com/view/izumi-sena-izumi-ensemble-stars-enstars-gif-25769063"></a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         </div>
       </div>
       <div class="gradient4">
         <div class="projetVideo">
-          <div class="title" id="video">Projet Vidéo
-            <div class="date">2019</div>
+          <div class="title" id="video">Izumi Sena
+            <div class="date">#3</div>
           </div>
-          <iframe class="imageProjet01" src="https://www.youtube.com/watch?v=8uYRs64LOHw" alt="Projet Vidéo" ></iframe>
+          <iframe class="imageProjet01" src="https://tenor.com/bEpjU.gif" alt="Projet Vidéo" ></iframe>
         </div>
       </div>
       <div class="gradient5">
         <div class="projetJeu">
-          <div class="title" id="jeu3d">Projet Jeu 3d
-            <div class="date">2019</div>
+          <div class="title" id="jeu3d">Izumi Sena
+            <div class="date">#4</div>
           </div>
-          <img class="imageProjet01" src="https://i.imgur.com/AfRv5V8.png" alt="Projet Jeu 3d" />
+          <img class="imageProjet01" src="https://tenor.com/bSvtf.gif" alt="Projet Jeu 3d" />
         </div>
       </div>
     </body>
