--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           <div class="title">Izumi Sena
             <div class="date">#1</div>
           </div>
-          <div class="imageProjet01" data-postid="22894774" data-share-method="host" data-aspect-ratio="2.16216" data-width="100%"><a href="https://tenor.com/view/izumi-sena-ensemble-stars-enstars-izuleo-knights-gif-22894774"></a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <div><iframe  class="imageProjet01" id="animation2d"  src="https://tenor.com/view/izumi-sena-ensemble-stars-enstars-izuleo-knights-gif-22894774" width="100%" height="100%"  allowFullScreen></iframe>
+      </div>
         </div>
       </div>
       <div class="gradient3">
