--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           </div>
           <div class="animation"></div>
           <div class="projet">
-            <div class="projet01"> <a href="#photoshop">Izumi Sena </a></div>
+            <div class="projet01"> <a href="#1">Izumi Sena </a></div>
             <div class="date">#1</div>
-            <div class="projet02"><a href="#animation2d">Izumi Sena</a></div>
+            <div class="projet02"><a href="#2">Izumi Sena</a></div>
             <div class="date">#2</div>
-            <div class="projet03"><a href="#video">Izumi Sena</a></div>
+            <div class="projet03"><a href="#3">Izumi Sena</a></div>
             <div class="date">#3</div>
-            <div class="projet04"><a href="#jeu3d">Izumi Sena</a></div>
+            <div class="projet04"><a href="#4">Izumi Sena</a></div>
             <div class="date">#4</div>
           </div>
         </div>
@@ -35,7 +35,7 @@
       </div>
       <div class="gradient2">
         <div class="projetPhotoshop">
-          <div class="title">Izumi Sena
+          <div class="title" id="#1">Izumi Sena
             <div class="date">#1</div>
           </div>
         <div><iframe  class="imageProjet01" id="animation2d"  src="https://tenor.com/view/izumi-sena-ensemble-stars-enstars-izuleo-knights-gif-22894774" width="100%" height="100%"  allowFullScreen></iframe>
@@ -44,23 +44,23 @@
       </div>
       <div class="gradient3">
         <div class="projetAnimation">
-          <div class="title" id="animation2d">Izumi Sena
+          <div class="title" id="#2">Izumi Sena
             <div class="date">#2</div>
           </div>
           <div class="imageProjet01" data-postid="25769063" data-share-method="host" data-aspect-ratio="0.590625" data-width="100%"><a href="https://tenor.com/view/izumi-sena-izumi-ensemble-stars-enstars-gif-25769063"></a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         </div>
       </div>
       <div class="gradient4">
-        <div class="projetVideo">
+        <div class="#3">
           <div class="title" id="video">Izumi Sena
             <div class="date">#3</div>
           </div>
-          <iframe class="imageProjet01" src="https://tenor.com/bEpjU.gif" alt="Projet Vidéo" ></iframe>
+          <img class="imageProjet01" src="https://tenor.com/bEpjU.gif" alt="Projet Vidéo" />
         </div>
       </div>
       <div class="gradient5">
         <div class="projetJeu">
-          <div class="title" id="jeu3d">Izumi Sena
+          <div class="title" id="#4">Izumi Sena
             <div class="date">#4</div>
           </div>
           <img class="imageProjet01" src="https://tenor.com/bSvtf.gif" alt="Projet Jeu 3d" />
