--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="title" id="#1">Izumi Sena
             <div class="date">#1</div>
           </div>
-        <div><iframe  class="imageProjet01" id="animation2d"  src="https://tenor.com/view/izumi-sena-ensemble-stars-enstars-izuleo-knights-gif-22894774" width="100%" height="100%"  allowFullScreen></iframe>
+        <div><img  class="imageProjet01" id="#1"  src="https://tenor.com/view/izumi-sena-ensemble-stars-enstars-izuleo-knights-gif-22894774" width="100%" height="100%"/>
       </div>
         </div>
       </div>
@@ -52,10 +52,10 @@
       </div>
       <div class="gradient4">
         <div class="#3">
-          <div class="title" id="video">Izumi Sena
+          <div class="title" id="#3">Izumi Sena
             <div class="date">#3</div>
           </div>
-          <img class="imageProjet01" src="https://tenor.com/bEpjU.gif" alt="Projet Vidéo" />
+          <img class="imageProjet01" src="https://tenor.com/bEpjU.gif" alt="Izumi Sena #3" />
         </div>
       </div>
       <div class="gradient5">
@@ -63,7 +63,7 @@
           <div class="title" id="#4">Izumi Sena
             <div class="date">#4</div>
           </div>
-          <img class="imageProjet01" src="https://tenor.com/bSvtf.gif" alt="Projet Jeu 3d" />
+          <img class="imageProjet01" src="https://tenor.com/bSvtf.gif" alt="Izumi Sena #4" />
         </div>
       </div>
     </body>
