--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="title" id="#1">Izumi Sena
             <div class="date">#1</div>
           </div>
-        <div><img  class="imageProjet01" id="#1"  src="https://tenor.com/view/izumi-sena-ensemble-stars-enstars-izuleo-knights-gif-22894774" width="100%" height="100%"/>
+        <div><img  class="imageProjet01" id="#1"  src="https://pbs.twimg.com/media/FM_M6IUagAAqAau.jpg:large" width="100%" height="100%"/>
       </div>
         </div>
       </div>
