--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           </div>
           <div class="animation"></div>
           <div class="projet">
-            <div class="projet01"> <a href="#1">Izumi Sena </a></div>
+            <div class="projet01"> <a href="01">Izumi Sena </a></div>
             <div class="date">#1</div>
-            <div class="projet02"><a href="#2">Izumi Sena</a></div>
+            <div class="projet02"><a href="02">Izumi Sena</a></div>
             <div class="date">#2</div>
-            <div class="projet03"><a href="#3">Izumi Sena</a></div>
+            <div class="projet03"><a href="03">Izumi Sena</a></div>
             <div class="date">#3</div>
-            <div class="projet04"><a href="#4">Izumi Sena</a></div>
+            <div class="projet04"><a href="04">Izumi Sena</a></div>
             <div class="date">#4</div>
           </div>
         </div>
@@ -35,7 +35,7 @@
       </div>
       <div class="gradient2">
         <div class="projetPhotoshop">
-          <div class="title" id="#1">Izumi Sena
+          <div class="title" id="01">Izumi Sena test
             <div class="date">#1</div>
           </div>
         <div><img  class="imageProjet01" id="#1"  src="https://pbs.twimg.com/media/FM_M6IUagAAqAau.jpg:large" width="100%" height="100%"/>
@@ -44,7 +44,7 @@
       </div>
       <div class="gradient3">
         <div class="projetAnimation">
-          <div class="title" id="#2">Izumi Sena
+          <div class="title" id="02">Izumi Sena
             <div class="date">#2</div>
           </div>
           <div class="imageProjet01" data-postid="25769063" data-share-method="host" data-aspect-ratio="0.590625" data-width="100%"><a href="https://tenor.com/view/izumi-sena-izumi-ensemble-stars-enstars-gif-25769063"></a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
@@ -52,7 +52,7 @@
       </div>
       <div class="gradient4">
         <div class="#3">
-          <div class="title" id="#3">Izumi Sena
+          <div class="title" id="03">Izumi Sena
             <div class="date">#3</div>
           </div>
           <img class="imageProjet01" src="https://tenor.com/bEpjU.gif" alt="Izumi Sena #3" />
@@ -60,7 +60,7 @@
       </div>
       <div class="gradient5">
         <div class="projetJeu">
-          <div class="title" id="#4">Izumi Sena
+          <div class="title" id="04">Izumi Sena
             <div class="date">#4</div>
           </div>
           <img class="imageProjet01" src="https://tenor.com/bSvtf.gif" alt="Izumi Sena #4" />
