--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             This site was temporaly created for a special event.<br/>
             Happy birthday Irissa!!!
           </div>
-          <div class="placeholder" id="placeholder">
+          <div class="contact" id="contact">
             From:<br/>
             Moonlight<br/>
             Ensemble Stars discord<br/>
@@ -47,7 +47,7 @@
           <div class="title" id="02">Izumi Sena
             <div class="date">#2</div>
           </div>
-          <div class="imageProjet01" data-postid="25769063" data-share-method="host" data-aspect-ratio="0.590625" data-width="100%"><a href="https://tenor.com/view/izumi-sena-izumi-ensemble-stars-enstars-gif-25769063"></a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+          <div> <img  class="imageProjet01" id="#2"  src="https://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png/revision/latest?cb=20210814215307" width="100%" height="100%"/>
         </div>
       </div>
       <div class="gradient4">
@@ -55,7 +55,7 @@
           <div class="title" id="03">Izumi Sena
             <div class="date">#3</div>
           </div>
-          <img class="imageProjet01" src="https://tenor.com/bEpjU.gif" alt="Izumi Sena #3" />
+          <img class="imageProjet01" src="https://i.ytimg.com/vi/77zfXT1GPTY/maxresdefault.jpg" width="100%" height="100%" alt="Izumi Sena #3" />
         </div>
       </div>
       <div class="gradient5">
@@ -63,7 +63,7 @@
           <div class="title" id="04">Izumi Sena
             <div class="date">#4</div>
           </div>
-          <img class="imageProjet01" src="https://tenor.com/bSvtf.gif" alt="Izumi Sena #4" />
+          <img class="imageProjet01" src="https://s2.dmcdn.net/v/Ni3cn1R3QctXW_Ie3/x1080" width="100%" height="100%" alt="Izumi Sena #4" />
         </div>
       </div>
     </body>
