--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="title" id="01">Izumi Sena test
             <div class="date">#1</div>
           </div>
-        <div><img  class="imageProjet01" id="#1"  src="https://pbs.twimg.com/media/FM_M6IUagAAqAau.jpg:large" width="100%" height="100%"/>
+        <div><img  class="imageProjet01" id="01"  src="https://pbs.twimg.com/media/FM_M6IUagAAqAau.jpg:large" width="100%" height="100%"/>
       </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
           <div class="title" id="02">Izumi Sena
             <div class="date">#2</div>
           </div>
-          <div> <img  class="imageProjet01" id="#2"  src="https://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png/revision/latest?cb=20210814215307" width="100%" height="100%"/>
+          <div> <img  class="imageProjet01" id="02"  src="https://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png/revision/latest?cb=20210814215307" width="100%" height="100%"/>
         </div>
       </div>
       <div class="gradient4">
