--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           </div>
           <div class="animation"></div>
           <div class="projet">
-            <div class="projet01"> <a href="Izu">Izumi Sena </a></div>
+            <div class="projet01"> <a href="#01">Izumi Sena 01</a></div>
             <div class="date">#1</div>
-            <div class="projet02"><a href="Umi">Izumi Sena</a></div>
+            <div class="projet02"><a href="#02">Izumi Sena 02</a></div>
             <div class="date">#2</div>
-            <div class="projet03"><a href="Sen">Izumi Sena</a></div>
+            <div class="projet03"><a href="#03">Izumi Sena 03</a></div>
             <div class="date">#3</div>
-            <div class="projet04"><a href="Ena">Izumi Sena</a></div>
+            <div class="projet04"><a href="#04">Izumi Sena 04</a></div>
             <div class="date">#4</div>
           </div>
         </div>
@@ -35,35 +35,34 @@
       </div>
       <div class="gradient2">
         <div class="projetPhotoshop">
-          <div class="title" id="Izu">Izumi Sena
+          <div class="title">Izumi Sena
             <div class="date">#1</div>
           </div>
-        <div><img  class="imageProjet01" src="https://pbs.twimg.com/media/FM_M6IUagAAqAau.jpg:large" width="100%" height="100%"/>
-      </div>
+          <img class="imageProjet01" id="01" src="https://pbs.twimg.com/media/FM_M6IUagAAqAau.jpg:large" alt="Izumi Sena" />
         </div>
       </div>
       <div class="gradient3">
         <div class="projetAnimation">
-          <div class="title" id="Umi">Izumi Sena
-            <div class="date">#2</div>
+          <div class="title" id="02">Projet d'Animation 2d
+            <div class="date">2019</div>
           </div>
-          <div> <img  class="imageProjet01" src="https://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png/revision/latest?cb=20210814215307" width="100%" height="100%"/>
+          <img class="imageProjet01" src="https://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png/revision/latest?cb=20210814215307" alt="Izumi Sena" />
         </div>
       </div>
       <div class="gradient4">
-        <div class="#3">
-          <div class="title" id="Sen">Izumi Sena
-            <div class="date">#3</div>
+        <div class="projetVideo">
+          <div class="title" id="03">Projet Vidéo
+            <div class="date">2019</div>
           </div>
-          <img class="imageProjet01" src="https://i.ytimg.com/vi/77zfXT1GPTY/maxresdefault.jpg" width="100%" height="100%" alt="Izumi Sena #3" />
+          <img class="imageProjet01" src="https://i.ytimg.com/vi/77zfXT1GPTY/maxresdefault.jpg" alt="Izumi Sena" />
         </div>
       </div>
       <div class="gradient5">
         <div class="projetJeu">
-          <div class="title" id="Ena">Izumi Sena
-            <div class="date">#4</div>
+          <div class="title" id="04">Projet Jeu 3d
+            <div class="date">2019</div>
           </div>
-          <img class="imageProjet01" src="https://s2.dmcdn.net/v/Ni3cn1R3QctXW_Ie3/x1080" width="100%" height="100%" alt="Izumi Sena #4" />
+          <img class="imageProjet01" src="https://s2.dmcdn.net/v/Ni3cn1R3QctXW_Ie3/x1080" alt="Izumi Sena" />
         </div>
       </div>
     </body>
