--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
       </div>
       <div class="gradient3">
         <div class="projetAnimation">
-          <div class="title" id="02">Projet d'Animation 2d
-            <div class="date">2019</div>
+          <div class="title" id="02">Izumi Sena
+            <div class="date">#2</div>
           </div>
-          <img class="imageProjet01" src="https://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png/revision/latest?cb=20210814215307" alt="Izumi Sena" />
+          <img class="imageProjet01" src="hthttps://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png" alt="Izumi Sena" />
         </div>
       </div>
       <div class="gradient4">
         <div class="projetVideo">
-          <div class="title" id="03">Projet Vidéo
-            <div class="date">2019</div>
+          <div class="title" id="03">Izumi Sena
+            <div class="date">#3</div>
           </div>
           <img class="imageProjet01" src="https://i.ytimg.com/vi/77zfXT1GPTY/maxresdefault.jpg" alt="Izumi Sena" />
         </div>
       </div>
       <div class="gradient5">
         <div class="projetJeu">
-          <div class="title" id="04">Projet Jeu 3d
-            <div class="date">2019</div>
+          <div class="title" id="04">Izumi Sena
+            <div class="date">#4</div>
           </div>
           <img class="imageProjet01" src="https://s2.dmcdn.net/v/Ni3cn1R3QctXW_Ie3/x1080" alt="Izumi Sena" />
         </div>
