--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="title" id="02">Izumi Sena
             <div class="date">#2</div>
           </div>
-          <img class="imageProjet01" src="hthttps://static.wikia.nocookie.net/ensemble-stars/images/3/35/%28Canary%27s_Memories%29_Izumi_Sena_CG.png" alt="Izumi Sena" />
+          <img class="imageProjet01" src="https://pbs.twimg.com/media/E8u4jTOVcAAaNRq?format=jpg&name=large" alt="Izumi Sena" />
         </div>
       </div>
       <div class="gradient4">
