--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           </div>
           <div class="description">
             This site was temporaly created for a special event.<br/>
-            Happy birthday Lyn!!!
+            Happy birthday Mun!!!
           </div>
           <div class="contact" id="contact">
             From:<br/>
@@ -21,13 +21,13 @@
           </div>
           <div class="animation"></div>
           <div class="projet">
-            <div class="projet01"> <a href="#01">Kaoru Hakaze</a></div>
+            <div class="projet01"> <a href="#01">Leo Tsukinaga</a></div>
             <div class="date">#1</div>
             <div class="projet02"><a href="#02">Natsume Sakasaki</a></div>
             <div class="date">#2</div>
             <div class="projet03"><a href="#03">Jun Sazanami</a></div>
             <div class="date">#3</div>
-            <div class="projet04"><a href="#04">Rei Sakuma</a></div>
+            <div class="projet04"><a href="#04">Rinne Amagi</a></div>
             <div class="date">#4</div>
           </div>
         </div>
@@ -35,10 +35,10 @@
       </div>
       <div class="gradient2">
         <div class="projetPhotoshop">
-          <div class="title">Kaoru Hakaze
+          <div class="title">Leo Tsukinaga
             <div class="date">#1</div>
           </div>
-          <img class="imageProjet01" id="01" src="https://i.pinimg.com/originals/3a/24/81/3a2481a741fdc8e7310ddaff6a98b933.png" alt="Kaoru Hakaze" />
+          <img class="imageProjet01" id="01" src="https://media.discordapp.net/attachments/886274682846851122/1130653020443652176/ddx08om-f58ea453-4644-45b6-badc-d11a9548d104.png" alt="Leo Tsukinaga" />
         </div>
       </div>
       <div class="gradient3">
@@ -59,10 +59,10 @@
       </div>
       <div class="gradient5">
         <div class="projetJeu">
-          <div class="title" id="04">Rei Sakuma
+          <div class="title" id="04">Rinne Amagi
             <div class="date">#4</div>
           </div>
-          <img class="imageProjet01" src="https://starb0t.carrd.co/assets/images/image04.jpg?v42511220690061" alt="Rei Sakuma" />
+          <img class="imageProjet01" src="https://w.forfun.com/fetch/fc/fc8d9648188e3ee460444890684304cc.jpeg" alt="Rinne Amagi" />
         </div>
       </div>
     </body>
