--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <div class="gradient">
         <div class="contenu">
           <div class="nom">
-            Lyn
+            Mun
           </div>
           <div class="description">
             This site was temporaly created for a special event.<br/>
